tests/golden/type_errors/array_filter_non_array.cd
filter(1, fun (value) { return true; });
